<resources>
    <string name="app_name">Notepad</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="incorrect_title_or_description">Title or description is null</string>
    <string name="successful_adding">Added new note successfully!</string>
    <string name="successful_updating">Updated note successfully!</string>
    <string name="edit_page_title_placeholder">Title</string>
    <string name="edit_page_description_placeholder">Description</string>
    <string name="save_button_description">save button</string>
    <string name="set_image_description">set image</string>
    <string name="article_image_description">article image</string>
    <string name="edit_button_description">edit button</string>
    <string name="delete_button_description">delete button</string>
    <string name="close_button_description">close button</string>
    <string name="add_note_button_description">add note button</string>
    <string name="article_preview_image_description">article preview image</string>
    <string name="searchview_description">SearchView</string>
</resources>