<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/edit_page_title_placeholder"
        android:textColorHint="@color/tint_color"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLayout"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_page_description_placeholder"
        android:textColorHint="@color/tint_color"
        android:textColor="@color/black"
        android:inputType="textMultiLine|textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etTitle"
        app:layout_constraintStart_toStartOf="@+id/etTitle"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onSaveButton"
        app:backgroundTint="@color/buttonColor"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="@+id/etDescription"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/ic_save"
        app:tint="@null"
        android:contentDescription="@string/save_button_description"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/setImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickSetImage"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:srcCompat="@drawable/ic_image"
        app:tint="@color/white"
        android:contentDescription="@string/set_image_description"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/etTitle"
        app:layout_constraintStart_toStartOf="@+id/etTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/articleImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_image"
            android:contentDescription="@string/article_image_description" />

        <ImageButton
            android:id="@+id/editImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/fab_bg"
            android:onClick="onClickChangeImage"
            app:layout_constraintStart_toStartOf="@+id/articleImage"
            app:layout_constraintTop_toTopOf="@+id/articleImage"
            app:srcCompat="@drawable/ic_edit"
            app:tint="@color/buttonColor"
            android:contentDescription="@string/edit_button_description"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/deleteImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/fab_bg"
            android:onClick="onClickDeleteImage"
            app:layout_constraintStart_toEndOf="@+id/editImageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete"
            app:tint="@color/buttonColor"
            android:contentDescription="@string/delete_button_description"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/closeImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/fab_bg"
            android:onClick="onClickCloseImage"
            app:layout_constraintEnd_toEndOf="@+id/articleImage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/buttonColor"
            android:contentDescription="@string/close_button_description"
            tools:ignore="UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>